Update swing header to  fix overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -101,13 +101,14 @@ img.center {
 }
 #swing-header {
   color: #6A1B9A;
-  text-align: center;
-  -webkit-animation:swing;
-  animation:swing;
-  -webkit-animation-duration:5s;
-  animation-duration:5s;
-  -webkit-animation-iteration-count:infinite;
-  animation-iteration-count:infinite
+  display: inline-block;
+  margin-top: 10px;
+  -webkit-animation: swing;
+  animation: swing;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 @keyframes swing {
